--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Languages Spoken in AFRICA</h1>
         <p>My goal is to create a geo mapping of the African continent and gather data on the different languages that are spoken through out the nation. So when you hover over each country you'll be able to see the population of the country and the primary language for that country along with a percentage of how much of that nation speaks the primary language. I would like to use a legend to show the 6 different language families each languages belong to. </p>
+        
+        <img src= "African_language_families.png">
         <ul>
             <li> <a href="https://en.wikipedia.org/wiki/Languages_of_Africa#Demographics">
                 Source 1</a></li>
@@ -22,10 +24,12 @@
         <ol>
             <li> <a href="http://lkozma.net/blog/languages-visualization/">
                 Languages of the World visualization</a></li>
+            <li> <a href="http://worldmap.harvard.edu/africamap/">
+                Languages of Africa visualization</a></li>
 
         </ol>
-        <p>Proposal by: Danay Weldegabriel</p>
-        <p>Email: dweldega@ucsc.edu</p>
+        <p>Project by: Danay Weldegabriel & Aaron Steele</p>
+        <p>Emails: dweldega@ucsc.edu, atsteele@ucsc.edu</p>
         
     </body>
 </html>
