added sample visualization to index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
     <body>
         <h1>Languages Spoken in AFRICA</h1>
-        <p>My goal is to create a geo mapping of the African continent and gather data on the different languages that are spoken through out the nation. So when you hover over each country you'll be able to see the population of the country and the primary language for that country along with a percentage of how much of that nation speaks the primary language. I would like to use a legend to show the 6 different language families each languages belong to. </p>
+        <p>The goal is to create a geo mapping of the African continent and gather data on the different languages that are spoken throughout the nation. So when you hover over each country you'll be able to see the population of the country and the primary language for that country along with a percentage of how much of that nation speaks the primary language. I would like to use a legend to show the 6 different language families each language belongs to. </p>
         
         <img src= "African_language_families.png">
         <ul>
@@ -22,6 +22,8 @@
         </ul>
         <h3><strong>Visualization</strong></h3>
         <ol>
+            <li> <a href="https://dweldega.github.io/Languages-in-Africa/Africa.html">
+                Our sample visualization</a></li>
             <li> <a href="http://lkozma.net/blog/languages-visualization/">
                 Languages of the World visualization</a></li>
             <li> <a href="http://worldmap.harvard.edu/africamap/">
