switched topics from lanugages to poverty

--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Languages in Africa</title>
+        <title>Poverty in AFRICA</title>
         <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
     </head>
     <body>
     <body>
-        <h1>Languages Spoken in AFRICA</h1>
-        <p>The goal is to create a geo mapping of the African continent and gather data on the different languages that are spoken throughout the nation. So when you hover over each country you'll be able to see the population of the country and the primary language for that country along with a percentage of how much of that nation speaks the primary language. I would like to use a legend to show the 6 different language families each language belongs to. </p>
+        <h1>Poverty in AFRICA</h1>
+        <p>The goal is to create a geo mapping of the African continent and gather data that can be used to visualize the dependencies of how population growth is affected by poverty, inflation and HDI over a certain time period. We plan on using a slider to show the differnt years and radio buttons to switch between the different variable.</p>
         
-        <img src= "African_language_families.png">
         <ul>
-            <li> <a href="https://en.wikipedia.org/wiki/Languages_of_Africa#Demographics">
-                Source 1</a></li>
-            <li> <a href="https://en.wikipedia.org/wiki/List_of_sovereign_states_and_dependent_territories_in_Africa">
-                Source 2</a></li>
-            <li> <a href="http://www.focac.org/eng/zjfz/fzzl/t619829.htm">
-                Source 3</a></li>
-            <li> <a href="https://www.ethnologue.com/browse/countries#quicktabs-browse_the_countries_of_the_worl=1">
-                Source 4</a></li>
+            <li> <a href="https://en.wikipedia.org/wiki/List_of_African_countries_by_Human_Development_Index">
+              HDI info</a></li>
+            <li> <a href="http://povertydata.worldbank.org/poverty/category/LIC">
+                Poverty data</a></li>
+            <li> <a href="https://en.wikipedia.org/wiki/Economy_of_Africa">
+                Inflation</a></li>
         </ul>
         <h3><strong>Visualization</strong></h3>
         <ol>
-            <li> <a href="https://dweldega.github.io/Languages-in-Africa/Africa.html">
-                Our sample visualization</a></li>
-            <li> <a href="http://lkozma.net/blog/languages-visualization/">
-                Languages of the World visualization</a></li>
-            <li> <a href="http://worldmap.harvard.edu/africamap/">
-                Languages of Africa visualization</a></li>
+            <li> <a href="http://esango.un.org/sp/ldc_gemu/web/StatPlanet.html?_ga=2.55964971.1092007903.1527814164-277299507.1527814164">
+                Sample visualization</a></li>
+            <li> <a href="http://dweldega.github.io/Languages-in-Africa/Africa.html">
+                Outline of Africa</a></li>
+            <li> <a href="https://data.worldbank.org/indicator/FP.CPI.TOTL.ZG">
+                Inflation</a></li>
 
         </ol>
         <p>Project by: Danay Weldegabriel & Aaron Steele</p>
