Population/Area data

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Poverty in AFRICA</title>
+        <title>Poverty in Africa</title>
         <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
     </head>
     <body>
     <body>
         <h1>Poverty in AFRICA</h1>
-        <p>The goal is to create a geo mapping of the African continent and gather data that can be used to visualize the dependencies of how population growth is affected by poverty, inflation and HDI over a certain time period. We plan on using a slider to show the differnt years and radio buttons to switch between the different variable.</p>
+        <script type="text/javascript" src="PovertyAfrica.js"></script>
         
+        
+        <p>The goal is to create a geo mapping of the African continent and gather data that can be used to visualize the dependencies of how population growth is affected by poverty, inflation and HDI over a certain time period. We plan on using a slider to show the differnt years and radio buttons to switch between the different variable.</p>
+
         <ul>
             <li> <a href="https://en.wikipedia.org/wiki/List_of_African_countries_by_Human_Development_Index">
               HDI info</a></li>
