--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class='svgContainer'></div>
         <div class='right-container'>
 			<div class='buttons'>
-				<input type='radio' value='poverty' /> Poverty Rate <br/>
-				<input type='radio' value='popdensity' checked=true /> Population Density <br/>
-				<input type='radio' value='hdi' /> HDI <br/>
-				<input type='radio' value='gini' /> Gini Coefficient <br/>
-				<input type='radio' value='inflation' /> Inflation Rate <br/>
+				<input type='radio' name='variable' value='poverty' /> Poverty Rate <br/>
+				<input type='radio' name='variable' value='popdensity' checked=true /> Population Density <br/>
+				<input type='radio' name='variable' value='hdi' /> HDI <br/>
+				<input type='radio' name='variable' value='hdiLE' /> Life Expectancy <br/>
+				<input type='radio' name='variable' value='gini' /> Gini Coefficient <br/>
 			</div>
 			<div class='legend-container'>
 				
@@ -44,12 +44,10 @@
 			</ul>
 			<h3><strong>Visualization</strong></h3>
 			<ol>
-				<li> <a href="http://esango.un.org/sp/ldc_gemu/web/StatPlanet.html?_ga=2.55964971.1092007903.1527814164-277299507.1527814164">
-					Sample visualization</a></li>
-				<li> <a href="http://dweldega.github.io/Languages-in-Africa/Africa.html">
-					Outline of Africa</a></li>
-				<li> <a href="https://data.worldbank.org/indicator/FP.CPI.TOTL.ZG">
-					Inflation</a></li>
+				<li> <a href="http://esango.un.org/sp/ldc_gemu/web/StatPlanet.html?_ga=2.55964971.1092007903.1527814164-277299507.1527814164">Sample visualization</a></li>
+				<li> <a href="http://dweldega.github.io/Languages-in-Africa/Africa.html">Outline of Africa</a></li>
+				<li> <a href="https://data.worldbank.org/indicator/FP.CPI.TOTL.ZG">Inflation</a></li>
+				<li> <a href='https://bl.ocks.org/mbostock/5562380'>CA Population Density</a></li>
 
 			</ol>
 			<p>Project by: Danay Weldegabriel & Aaron Steele</p>
