--- a/index.html
+++ b/index.html
@@ -8,33 +8,26 @@
         <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
         <script src="https://d3js.org/d3-queue.v3.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
+        <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
         <link rel="stylesheet" type="text/css" href="PovertyAfrica.css">
     </head>
-    <body>
-    <body>
+    <body onload="btnForm.reset();">
         <h1>Poverty in Africa</h1>
         <div class='project-container'>
             <div class='legend-container'></div>
             <div class='svgContainer'></div>
              
             <div class='slider-container'>
-                <input class="slider" type="range" min="1998" max="2017" step="1" value="1998">
+                <input class="slider" type="range" min="0" max="19" step="1" value="0">
             </div>
             <div class='right-container'>
                 <div class='buttons'>
-<!--
-                    <input type='radio' name='variable' value='poverty' /> Poverty Rate <br/>
-                    <input type='radio' name='variable' value='popdensity' checked=true /> Population Density <br/>
-                    <input type='radio' name='variable' value='hdi' /> HDI <br/>
-                    <input type='radio' name='variable' value='hdiLE' /> Life Expectancy <br/>
-                    <input type='radio' name='variable' value='gini' /> Gini Coefficient <br/>
--->
-                    <form>
+                    <form name='btnForm'>
                         <label class="radio-inline">
-                          <input type="radio" name="variable" value='0'>Poverty Rate
+                          <input type="radio" name="variable" value='0' checked=true>Poverty Rate
                         </label>
                         <label class="radio-inline">
-                          <input type="radio" name="variable" value='1' checked=true>Population Density
+                          <input type="radio" name="variable" value='1'>Population Density
                         </label>
                         <label class="radio-inline">
                           <input type="radio" name="variable" value='2'>HDI
