Tweaking domains for better visibility

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                           <input type="radio" name="variable" value='4'>Gini Coefficient
                         </label>
                         <br />
-                        <label class="radio-inline">
+                        <label class="radio-inline" style="text-align:center">
                           <input type="radio" name="variable" value='1'>Population Density
                         </label>
                       </form>
