Year updating with slider

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class='svgContainer'></div>
              
             <div class='slider-container'>
-                 <label class="year" type="updateYR">Data shown for: 1998</label>:
+                <label class="year" type="updateYR">Data shown for: <span class="yearVal">1998</span></label>
                 <input class="slider" type="range" min="0" max="19" step="1" value="0">
             </div>
             <div class='right-container'>
