--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
         <link rel="stylesheet" type="text/css" href="PovertyAfrica.css">
     </head>
     <body onload="btnForm.reset();">
-        <div class="staticTooltip">
-            <p><br>Country:</p>
-            <p>Population:</p>
-            <p>Poverty Rate:</p>
-            <p>HDI:</p>
-            <p>Life Expectancy:</p>
-            <p>Gini Coefficient:</p>
-            <p>Population Density:</p>
-        </div>
         <h1>Poverty and HDI in Africa</h1>
         <h4>Story here</h4>
         <div class='project-container'>
-            <!--<div class='legend-container'></div>-->
+            <div class="staticTooltip">
+				<p>Country: <span class="ttCountry"></span></p>
+				<p>Population: <span class="ttPop"></span></p>
+				<p>Poverty Rate: <span class="ttPov"></span></p>
+				<p>HDI: <span class="ttHDI"></span></p>
+				<p>Life Expectancy: <span class="ttLifeEx"></span></p>
+				<p>Gini Coefficient: <span class="ttGini"></span></p>
+				<p>Population Density: <span class="ttPopDens"></span></p>
+			</div>
             <div class='svgContainer'></div>
             <div class='slider-container'>
                 <label class="year" type="updateYR">Data shown for: <span class="yearVal" id = "update">1998</span></label>
