--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <h4>Story here</h4>
         <div class='project-container'>
             <div class="staticTooltip">
-				<p>Country: <span class="ttCountry"></span></p>
-				<p>Population: <span class="ttPop"></span></p>
-				<p>Poverty Rate: <span class="ttPov"></span></p>
-				<p>HDI: <span class="ttHDI"></span></p>
-				<p>Life Expectancy: <span class="ttLifeEx"></span></p>
-				<p>Gini Coefficient: <span class="ttGini"></span></p>
-				<p>Population Density: <span class="ttPopDens"></span></p>
+				<p>Country: <span class="ttValues" id="ttCountry"></span></p>
+				<p>Population: <span class="ttValues"  id="ttPop"></span></p>
+				<p>Poverty Rate: <span class="ttValues"  id="ttPov"></span></p>
+				<p>HDI: <span class="ttValues"  id="ttHDI"></span></p>
+				<p>Life Expectancy: <span class="ttValues"  id="ttLifeEx"></span></p>
+				<p>Gini Coefficient: <span class="ttValues"  id="ttGini"></span></p>
+				<p>Population Density: <span class="ttValues"  id="ttPopDens"></span></p>
 			</div>
             <div class='svgContainer'></div>
             <div class='slider-container'>
