--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Poverty and HDI in Africa</h1>
         <h4>Story here</h4>
         <div class='project-container'>
-            <div class="staticTooltip">
+            <div class="staticTooltip hidden">
 				<p>Country: <span class="ttValues" id="ttCountry"></span></p>
 				<p>Population: <span class="ttValues"  id="ttPop"></span></p>
 				<p>Poverty Rate: <span class="ttValues"  id="ttPov"></span></p>
