--- a/index.html
+++ b/index.html
@@ -95,8 +95,13 @@
         </p>
           </div>
           <div class="column right">
-            <b>Code Sources</b>
-            <p>...</p>
+            <b>Code Sources</b><br>
+            <a href='https://github.com/d3/d3-scale-chromatic'>D3 Scale Chromatic</a>
+            <br>
+            <a href='https://bl.ocks.org/mbostock/5562380'>California Population Density</a>
+            <br>
+            <a href='http://bl.ocks.org/almccon/fe445f1d6b177fd0946800a48aa59c71'>Basic D3 Map</a>
+            
           </div>
         </div>
     </div>
