--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body onload="btnForm.reset();">
         <h1>Poverty and HDI in Africa</h1>
-        <h4>Story here</h4>
+        <h4>This visualization displays the progress these African countries have made in the last 20 years. We are able to see a decrease in poverty rate along with a steady imporovment in the standard of living, knowledge and life expectancy throughout the continent all while population continues to grow.</h4>
         <div class='project-container'>
             <div class="staticTooltip hidden">
 				<p>Country: <span class="ttValues" id="ttCountry"></span></p>
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="column left">
             <b>Files Submitted</b>
-            <p>index.html<br>linechartStyle.css<br>linechart.js<br>territory_dataWithBegining.csv</p>
+            <p>index.html<br>PoveryAfrica.css<br>PovertyAfrica.js<br>NumberOfPoor.csv<br>LifeExpectancy.csv<br>HDI.csv<br>GiniData.csv<br>AfricaPopulation.csv<br>AfricaArea.csv<br>GeoAfrica.json</p>
           </div>
           <div class="column middle1">
             <b>References</b>
