--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 				<p>Gini Coefficient: <span class="ttValues"  id="ttGini"></span></p>
 				<p>Population Density: <span class="ttValues"  id="ttPopDens"></span></p>
 			</div>
+            
             <div class='svgContainer'></div>
+            
+            <div class='details'>
+            Extra Details
+            </div>
             <div class='slider-container'>
                 <label class="year" type="updateYR">Data shown for: <span class="yearVal" id = "update">1998</span></label>
                 <input class="slider" id = "reset" type="range" min="0" max="19" step="1" value="0">
