--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <div class='svgContainer'></div>
             
             <div class='details'>
-            Extra Details
+            <strong>Human Development Index (HDI):</strong> a composite statistic of life expectancy, education, and per capita income indicators, which are used to rank countries into four tiers of human development.
+            <br/><br/>
+            <strong>Gini Coefficient:</strong> a statistical measure of the degree of variation or inequality represented in a set of values. A higher value means more inequality. 
             </div>
             <div class='slider-container'>
                 <label class="year" type="updateYR">Data shown for: <span class="yearVal" id = "update">1998</span></label>
