good shit my guy

--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
             <p>index.html<br>PoveryAfrica.css<br>PovertyAfrica.js<br>NumberOfPoor.csv<br>LifeExpectancy.csv<br>HDI.csv<br>GiniData.csv<br>AfricaPopulation.csv<br>AfricaArea.csv<br>GeoAfrica.json</p>
           </div>
           <div class="column middle1">
-            <b>References</b>
+            <b>Data Sources</b>
             <p>
             <a data-brackets-id="62" href="https://en.wikipedia.org/wiki/List_of_African_countries_by_Human_Development_Index">HDI info</a><br>
             <a data-brackets-id="62" href="https://sureshlodha.github.io/CMPS165_Winter15_FinalProjects/Measles/">Class Example</a><br>
-            <a data-brackets-id="62" href=href="https://en.wikipedia.org/wiki/Economy_of_Africa">Inflation</a>
+            <a data-brackets-id="62" href="http://databank.worldbank.org/data/reports.aspx?source=poverty-and-equity-database">Poverty</a><br>
+            <a data-brackets-id="62" href="https://data.worldbank.org/indicator/SI.POV.GINI?locations=ZA">GINI </a>    
                 
             </p>
           </div>
